--- a/templates/actor/parts/actor-perks.hbs
+++ b/templates/actor/parts/actor-perks.hbs
@@ -22,15 +22,10 @@
                            data-item="{{ item._id }}"
                            class="fas fa-plus-square"></i>
                     </div>
-    <li class="item flexrow" data-item-id="{{ item._id }}">
-        <div class="item-controls" style="background: black">
-            <a class="item-control item-delete"
-               title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                <i class="fas fa-trash"></i>
-            </a>
-        </div>
-    </li>
-    </td>
+                    <div class="perk-div" style="text-align:left;">
+                        <i class="fas fa-ellipsis-v context-menu context-icon perk-context" data-item-id="{{ item._id }}"></i>
+                    </div>
+                </td>
     </tr>
     </table>
     </li>
@@ -63,15 +58,10 @@
                            data-item="{{ item._id }}"
                            class="fas fa-plus-square"></i>
                     </div>
-    <li class="item flexrow" data-item-id="{{ item._id }}">
-        <div class="item-controls" style="background: black">
-            <a class="item-control item-delete"
-               title="{{localize 'DOCUMENT.Delete' type='item'}}">
-                <i class="fas fa-trash"></i>
-            </a>
-        </div>
-    </li>
-    </td>
+                    <div class="perk-div" style="text-align:left;">
+                        <i class="fas fa-ellipsis-v context-menu context-icon perk-context" data-item-id="{{ item._id }}"></i>
+                    </div>
+                </td>
     </tr>
     </table>
     </li>
